# runtime

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SQF-VM.sln  Sqf-Parser.VC.db  appveyor.yml  context.h  filesystem.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml  ci.yml  container.yml
.run/: slibsqfvm.run.xml  sqfvm - help.run.xml  sqfvm - run sqf-tests.run.xml  sqfvm - runTests.sqf.run.xml  sqfvm.run.xml
DLL/: SQF-VM.exp  SQF-VM.iobj  SQF-VM.ipdb  SQF-VM.lib
Debug/: SQF-VM.ilk
Debugger-CLI/: CommandHandler.cs  CommandHandlerItem.cs  CommandHandlerItem.tt  Debugger-CLI.csproj  Program.cs
Debugger-CLI/Properties/: AssemblyInfo.cs
Discord-Bot/: App.config  ConfigXml.cs  Discord-Bot.csproj  Discord-Bot.pyproj  Discord_Bot.py  Program.cs  SQF-VM.cs  bot.sh  packages.config
Discrod-Bot/: ConfigXml.cs  Discrod-Bot.csproj  Program.cs  SQF-VM.cs
Discrod-Bot/Properties/: AssemblyInfo.cs
Documentation/Debugger/: README.MD  error.md  get-callstack.json  get-callstack.md  get-status.md  get-variables.json  get-variables.md  message.md
Icon/: icon.xcf
MinSizeRel/: sqfvm.exp  sqfvm.lib
SQF-VM/: .cproject  .project  Entry.c  SQF-VM.vcxproj  SQF-VM.vcxproj.filters  SQF.c  SQF.h  SQF_base.c  SQF_base.h  SQF_commands.c  SQF_commands.h  SQF_inst.c  SQF_inst.h  SQF_object_type.c  SQF_object_type.h  SQF_parse.c  SQF_parse.h  SQF_script_type.c  SQF_script_type.h  SQF_side_type.c  SQF_side_type.h  SQF_types.c  SQF_types.h  basetype.c  basetype.h  bool.h  cfg_base.c  cfg_base.h  cfg_parse.c  cfg_parse.h  errors.h  makefile  random.h  sqf.c  sqf.h  sqf_array_type.c  sqf_array_type.h  sqf_base.c  sqf_base.h  sqf_commands.c  (+30 more)
SQF-VM/Debug/: entry.obj.enc  vc140.idb
cmake/: git_sha1.cpp.in
docker/: Dockerfile
docs/: config.xbnf
docs/Debugger/: README.MD  control.md  do-preprocess.md  get-status.json  load-sqf.md  message.md  parse-sqf.md  position.md  set-breakpoint.md
docs/PreProcessor/: pp.xnf
sqf-dummy-check/: delta.sqf  gen.sqf  ops.sqf
sqfvm-cpp/: Entry.cpp  arraydata.cpp  arraydata.h  astnode.cpp  astnode.h  booldata.cpp  booldata.h  callstack.cpp  callstack.h  callstack_apply.cpp  callstack_apply.h  callstack_count.cpp  callstack_count.h  callstack_exitwith.cpp  callstack_exitwith.h  callstack_for.cpp  callstack_for.h  callstack_foreach.cpp  callstack_foreach.h  callstack_isnil.cpp  callstack_isnil.h  callstack_select.cpp  callstack_select.h  callstack_switch.h  callstack_while.cpp  callstack_while.h  cmd.cpp  cmd.h  codedata.cpp  codedata.h  commandmap.cpp  commandmap.h  compiletime.h  configcmds.cpp  configdata.cpp  configdata.h  convert.cpp  convert.h  data.h  debugger.cpp  (+98 more)
sqfvm-debugger-test/: Program.cs  sqfvm-debugger-test.csproj
src/: Entry.cpp  Entry.h  ReadMe.md  arraydata.cpp  arraydata.h  astnode.cpp  astnode.h  booldata.h  breakpoint.h  callstack.cpp  callstack.h  callstack_apply.cpp  callstack_apply.h  callstack_catch.h  callstack_configclasses.cpp  callstack_configclasses.h  callstack_configproperties.cpp  callstack_configproperties.h  callstack_count.cpp  callstack_count.h  callstack_exitwith.cpp  callstack_exitwith.h  callstack_findif.cpp  callstack_findif.h  callstack_for.cpp  callstack_for.h  callstack_for_step.cpp  callstack_for_step.h  callstack_foreach.cpp  callstack_foreach.h  callstack_isnil.cpp  callstack_isnil.h  callstack_select.cpp  callstack_select.h  callstack_sqftry.cpp  callstack_sqftry.h  callstack_switch.cpp  callstack_switch.h  callstack_waituntil.cpp  callstack_waituntil.h  (+103 more)
src/cli/: Entry.cpp  cli.cpp  cli.hpp  colors.h  files.cmake  interactive_helper.cpp  interactive_helper.h  main.cpp  main.h
src/commands/: configcmds.cpp  diagcmds.cpp  genericcmds.cpp  groupcmds.cpp  logiccmds.cpp  markercmds.cpp  mathcmds.cpp  namespacecmds.cpp  objectcmds.cpp  osspecificcmds.cpp  sqfvmcmds.cpp  stringcmds.cpp  unimplementedcmds.cpp
src/export/: dllexports.cpp  dllexports.h  files.cmake  sqfvm.cpp  sqfvm.h
src/fileio/: Cargo.toml  default.cpp  default.h  fileio_default.cpp  fileio_default.h  files.cmake
src/networking/: network_client.h  network_server.cpp  network_server.h  streamable.h
src/opcodes/: assign_to.cpp  assign_to.h  assign_to_local.cpp  assign_to_local.h  call_binary.cpp  call_binary.h  call_nular.cpp  call_nular.h  call_unary.cpp  call_unary.h  common.h  end_statement.h  files.cmake  get_variable.cpp  get_variable.h  make_array.cpp  make_array.h  push.h
src/operators/: callstack_apply.h  callstack_catch.cpp  callstack_catch.h  callstack_configclasses.cpp  callstack_configclasses.h  callstack_configproperties.cpp  callstack_exitwith.cpp  callstack_foreach.cpp  callstack_foreach.h  callstack_sqftry.cpp  callstack_sqftry.h  callstack_while.cpp  callstack_while.h  d_config.h  d_group.h  d_object.h  d_side.h  d_text.h  diagcmds.cpp  dlops.cpp  dlops.h  dlops_storage.h  files.cmake  group.cpp  group.h  groupcmds.cpp  object.cpp  object.h  objectcmds.cpp  ops.h  ops_config.cpp  ops_config.h  ops_diag.cpp  ops_diag.h  ops_dummy_binary.cpp  ops_dummy_binary.h  ops_dummy_nular.cpp  ops_dummy_nular.h  ops_dummy_unary.cpp  ops_dummy_unary.h  (+27 more)
src/parser/: files.cmake
src/parsing/: astnode.cpp  (+13 more)
tests/: CMakeLists.txt  ReadMe.md  cba_a3.py  cli-file.txt  config.cpp  framework.sqf  runTests.sqf
tests/cba/: .gitignore  CMakeLists.txt  cba_a3.py  cba_a3.sqf
tests/preprocess/: CMakeLists.txt  ReadMe.md  backslash.txt  define_macro_callable_0.sqf  define_macro_callable_0.txt  define_macro_callable_1.sqf  define_macro_callable_1.txt
tests/sqf/: ! compilation tests.sqf  ! config.sqf  ! math.sqf  ! misc.sqf  CMakeLists.txt  alive.sqf  append.sqf  apply.sqf  boolean.sqf  breakOut.sqf  config.sqf  count.sqf  deleteAt.sqf  deleteRange.sqf  diag.sqf  distance.sqf  distance2d.sqf  findIf.sqf  forEach.sqf  forStep.sqf  format.sqf  if.sqf  in.sqf  isEqualTo.sqf  isEqualType.sqf  isNil.sqf  isNotEqualTo.sqf  isServer.sqf  math.sqf  matrix.sqf  misc.sqf  namespace.sqf  params.sqf  private.sqf  select.sqf  selectLeader.sqf  set.sqf  side.sqf  sort.sqf  splitString.sqf  (+4 more)
(+219 files in other folders)
